# autofill

./: .autofill_install_id  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  posthog-setup-report.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
autofill/: __init__.py  agent.py  knowledge.py  onboarding.py  telemetry.py
knowledge/: profile.example.md
tests/: test_smoke.py
