[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autofill"
version = "0.1.0"
description = "AI-powered form autofill assistant"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Jay Zuccarelli", email = "jayzuccarelli@users.noreply.github.com" },
]
keywords = ["autofill", "ai", "forms", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "browser-use>=0.12.6,<0.13",
    "chromadb>=0.6",
    "docx2txt>=0.8",
    "pdfplumber>=0.11",
    "python-dotenv>=1.0",
    "questionary>=2.1.1",
    "rich>=14.0",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "ty>=0.0.37",
]

[project.urls]
Homepage = "https://github.com/jayzuccarelli/autofill"
Source = "https://github.com/jayzuccarelli/autofill"
Issues = "https://github.com/jayzuccarelli/autofill/issues"

[project.scripts]
autofill = "autofill.agent:cli"

[tool.hatch.build.targets.wheel]
packages = ["autofill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.11"
